Move from java to kotlin